Fixed homepage z-index problem

--- a/src/components/Footer/FooterStyles.scss
+++ b/src/components/Footer/FooterStyles.scss
@@ -5,6 +5,7 @@
   padding-inline: 20px;
   padding-bottom: 20px;
   font-family: "DM Sans";
+  z-index: 100;
 
   a {
     text-decoration: none;
