--- a/src/components/Navbar/NavbarStyles.scss
+++ b/src/components/Navbar/NavbarStyles.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   font-size: 15px;
+  z-index: 100;
 }
 .logo {
   letter-spacing: 0.01em;
