--- a/src/components/Showreal/showrealStyles.scss
+++ b/src/components/Showreal/showrealStyles.scss
@@ -9,7 +9,7 @@
   align-items: center;
   width: 100%;
   gap: 36px;
-  z-index: -1;
+
   @media screen and (min-width: 820px) {
     gap: 60px;
   }
